fix: better alignment of items #19

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -111,7 +111,8 @@
     gap: 0.5rem;
     margin: 1rem 0;
   }
-  #category-filter {
+
+  .filter-bar select {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -125,7 +126,7 @@
     transition: background 0.3s ease-in-out;
   }
   
-  #category-filter:hover {
+  .filter-bar select:hover {
     background: var(--magenta);
   }
   /* Cards */
